PCI8154/Library/Include/pci_8154.h

I16 FNTYPE _8154_get_target_pos(I16 AxisNo, F64 *TargetPos);
I16 FNTYPE _8154_set_res_distance(I16 AxisNo, F64 ResDistance);
I16 FNTYPE _8154_get_res_distance(I16 AxisNo, F64 *ResDistance);
//Position Compare and Latch Section 6.16
I16 FNTYPE _8154_set_do_cmp_output_selection(I16 CardId, I16 Channel, I16 DoCmpOutputSelection);
I16 FNTYPE _8154_set_trigger_logic(I16 AxisNo, I16 Logic);
I16 FNTYPE _8154_set_error_comparator(I16 AxisNo, I16 CmpMethod, I16 CmpAction, I32 Data);
I16 FNTYPE _8154_set_general_comparator(I16 AxisNo, I16 CmpSrc, I16 CmpMethod, I16 CmpAction, I32 Data);
I16 FNTYPE _8154_set_trigger_comparator(I16 AxisNo, I16 CmpSrc, I16 CmpMethod, I32 Data);
I16 FNTYPE _8154_set_latch_source(I16 AxisNo, I16 LtcSrc);
I16 FNTYPE _8154_set_ltc_logic(I16 AxisNo, I16 LtcLogic);
I16 FNTYPE _8154_get_latch_data(I16 AxisNo, I16 CounterNo, F64 *Pos);
I16 FNTYPE _8154_set_ring_counter( I16 AxisNo, I32 RingVal );
I16 FNTYPE _8154_get_ring_counter( I16 AxisNo, I32 *RingVal );