PCI8154/Library/Include/pci_8154.bas

Declare Function B_8154_get_target_pos Lib "8154.dll" Alias "_8154_get_target_pos" (ByVal AxisNo As Integer, TargetPos As Double) As Integer
Declare Function B_8154_set_res_distance Lib "8154.dll" Alias "_8154_set_res_distance" (ByVal AxisNo As Integer, ByVal ResDistance As Double) As Integer
Declare Function B_8154_get_res_distance Lib "8154.dll" Alias "_8154_get_res_distance" (ByVal AxisNo As Integer, ResDistance As Double) As Integer
'
' Position Compare and Latch Section 6.16
Declare Function B_8154_set_do_cmp_output_selection Lib "8154.dll" Alias "_8154_set_do_cmp_output_selection" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal DoCmpOutputSelection As Integer) As Integer
Declare Function B_8154_set_trigger_logic Lib "8154.dll" Alias "_8154_set_trigger_logic" (ByVal AxisNo As Integer, ByVal Logic As Integer) As Integer
Declare Function B_8154_set_error_comparator Lib "8154.dll" Alias "_8154_set_error_comparator" (ByVal AxisNo As Integer, ByVal CmpMethod As Integer, ByVal CmpAction As Integer, ByVal Data As Long) As Integer
Declare Function B_8154_set_general_comparator Lib "8154.dll" Alias "_8154_set_general_comparator" (ByVal AxisNo As Integer, ByVal CmpSrc As Integer, ByVal CmpMethod As Integer, ByVal CmpAction As Integer, ByVal Data As Long) As Integer
Declare Function B_8154_set_trigger_comparator Lib "8154.dll" Alias "_8154_set_trigger_comparator" (ByVal AxisNo As Integer, ByVal CmpSrc As Integer, ByVal CmpMethod As Integer, ByVal Data As Long) As Integer
Declare Function B_8154_set_latch_source Lib "8154.dll" Alias "_8154_set_latch_source" (ByVal AxisNo As Integer, ByVal LtcSrc As Integer) As Integer
Declare Function B_8154_set_ltc_logic Lib "8154.dll" Alias "_8154_set_ltc_logic" (ByVal AxisNo As Integer, ByVal LtcLogic As Integer) As Integer
Declare Function B_8154_get_latch_data Lib "8154.dll" Alias "_8154_get_latch_data" (ByVal AxisNo As Integer, ByVal CounterNo As Integer, Pos As Double) As Integer
Declare Function B_8154_set_ring_counter Lib "8154.dll" Alias "_8154_set_ring_counter" (ByVal AxisNo As Integer, ByVal RingVal As Integer) As Integer
Declare Function B_8154_get_ring_counter Lib "8154.dll" Alias "_8154_get_ring_counter" (ByVal AxisNo As Integer, RingVal As Integer) As Integer
'
